--- a/nguyenxuanloc_2011064700/nguyenxuanloc_2011064700.csproj
+++ b/nguyenxuanloc_2011064700/nguyenxuanloc_2011064700.csproj
@@ -169,6 +169,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Course.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -187,6 +188,14 @@
     <Compile Include="Migrations\202303100319163_PopulateCategoryTable.designer.cs">
       <DependentUpon>202303100319163_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202303170402092_Web.cs" />
+    <Compile Include="Migrations\202303170402092_Web.designer.cs">
+      <DependentUpon>202303170402092_Web.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303180116057_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202303180116057_AddNameColumnToApplicationUser.designer.cs">
+      <DependentUpon>202303180116057_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -197,6 +206,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
+    <Compile Include="ViewModels\CustomViewModel.cs" />
+    <Compile Include="ViewModels\FutureDate.cs" />
+    <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -224,6 +236,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Content\.editorconfig" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -310,6 +323,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202303100319163_PopulateCategoryTable.resx">
       <DependentUpon>202303100319163_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303170402092_Web.resx">
+      <DependentUpon>202303170402092_Web.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303180116057_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202303180116057_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
